k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: juice-shop-deployment
  namespace: juice-shop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: juice-shop

  template:
    metadata:
      labels:
        app: juice-shop

    spec:
      containers:
        - name: juice-shop
          image: juice-shop-appsec:latest

          imagePullPolicy: Never

          #securityContext:
          #  runAsNonRoot: false
          #  allowPrivilegeEscalation: false

          ports:
            - containerPort: 3000
