k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: juice-shop-service
  namespace: juice-shop

spec:
  selector:
    app: juice-shop

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
